[package]
name = "boilerplate-tile"
version = "0.1.0"
edition = "2021"
exclude = ["assets"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12", features = ["dynamic_linking"] }
bevy_rapier2d = { version = "0.23.0", features = [
	"simd-stable",
	"debug-render-2d",
] }
# gpu-paticle
bevy_hanabi = "0.9"
bevy_tweening = "0.9"

bevy_ecs_tilemap = "0.11.1"
bevy_scroller = "0.2.2"

bevy_image_export = "0.9.0"
leafwing-input-manager = "0.11.2"

bevy_kira_audio = { version = "0.18" }
bevy_asset_loader = { version = "0.19" }
rand = { version = "0.8.3" }

[profile.dev]
opt-level = 1

#hmmm
[profile.dev.package."*"]
opt-level = 3
# compiling optimisation for rapier2d
[profile.dev.package.bevy_rapier2d]
opt-level = 3
codegen-units = 1

[profile.release]
# compiling optimisation for rapier2d
codegen-units = 1

[build-dependencies]
embed-resource = "1.4"
